create-demo-clusters/aws/tf-rosa-keycloak/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    app: keycloak
